Add round corners to button

--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,66 @@
 body{
     display:flex;
     flex-direction: column;
+    font-family: Roboto, sans-serif;
 }
 
 .header{
     display: flex;
     flex-direction: column;
+    background-color: #1f2937;
+    height: 500px;
     
 }
 
+.logo{
+    font-size: 24px;
+    color: #F9FAF8;
+    height:200px;
+    font-weight: bold;
+}
 .top-container{
     display:flex;
     justify-content: space-between;
     align-items: flex-start;
-    padding: 40px;
+    padding: 20px;
+    height:100px;
+
+}
+
+h2{
+    font-size:48px;
+    color:#F9FAF8;
+    font-weight: 900px;
+    margin:0px;
+}
+
+.blue-button{
+    background-color:#3882F6;
+    color:#F9FAF8;
+    border-radius: 8px;
+    border: none;
+    font-size: 24px;
+    text-align: center;
+    padding: 10px 20px;
+}
+
+h3{
+    margin:0px;
 }
 
 .section-two{
     display:flex;
     justify-content: space-between;
-    padding: 40px;
+    padding: 20px;
+}
+ .left-sides2 p{
+    font-size: 18px;
+    color:#E5E7EB;
 }
 
 .left-links{
+    font-size: 18px;
+    color:#E5E7EB;
     display: flex;
     gap: 16px;
     list-style-type: none;
@@ -32,11 +70,11 @@ body{
 }
 
 .left-sides2{
-    width:300px;
+    width:450px;
     height: 200px;
 }
 
 .image-right{
-    width:250px;
-    height: 150px;
+    width:300px;
+    height: auto;
 }
