--- a/css/style.css
+++ b/css/style.css
@@ -78,3 +78,44 @@ h3{
     width:300px;
     height: auto;
 }
+
+.container-sec-3{
+    display:flex;
+    padding:20px;
+    align-items: center;
+    flex-direction: column;
+
+}
+
+.card-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 16px;
+    padding: 20px}
+
+.card{
+    border-style: solid;
+    border-color: #3882F6;
+    height:100px;
+    width:100px;
+    padding:5px;
+    border-radius: 10px;
+}
+
+.info{
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+   
+}
+
+.card-text{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    width:100px;
+    padding:10px;
+}
+
