--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body{
     display:flex;
     flex-direction: column;
     font-family: Roboto, sans-serif;
+    margin:0px;
 }
 
 .header{
@@ -92,30 +93,85 @@ h3{
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap: 16px;
+    gap: 35px;
     padding: 20px}
 
 .card{
     border-style: solid;
     border-color: #3882F6;
-    height:100px;
-    width:100px;
+    height:125px;
+    width:125px;
     padding:5px;
     border-radius: 10px;
 }
 
+
+.container-quote{
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+    background-color: #E5E7EB;
+}
+
+.quote{
+    font-size:30px;
+    color:#1F2937;
+    padding:40px;
+}
 .info{
     font-size: 36px;
     font-weight: 900;
     color: #1F2937;
    
 }
-
+.reference{
+    align-self: flex-end;
+    padding: 5px 50px 20px 10px;
+    font-size: 20px;
+    color: #1F2937;
+    font-weight: 900;
+}
 .card-text{
     display:flex;
     flex-direction: column;
     align-items: center;
     width:100px;
-    padding:10px;
+    padding:20px;
 }
 
+.footer{
+    background-color: #1F2937;
+    color: #F9FAF8;
+    text-align: center;
+    padding:20px;
+    font-size: 12px;
+}
+
+.container-signup{
+    margin: 75px;
+    background-color: #3882F6;
+    display:flex;
+    padding: 30px;
+    justify-content: space-between;
+    border-radius: 8px;
+}
+
+.whitebutton{
+    border-style: solid;
+    border-radius: 8px;
+    border-width: 2px;
+    background-color: #3882F6;
+    border-color: #E5E7EB;
+    color:#E5E7EB;
+    padding: 10px 20px;
+}
+
+.action{
+    color:#E5E7EB;
+}
+
+.signup{
+    color:#E5E7EB;
+    font-size:15px;
+}
