--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body{
     flex-direction: column;
     background-color: #1f2937;
     height: 500px;
+    padding: 0px 250px;
     
 }
 
@@ -89,6 +90,7 @@ h3{
 }
 
 .card-container{
+    padding: 0px 250px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -108,6 +110,7 @@ h3{
 
 .container-quote{
     display:flex;
+    padding: 0px 250px;
     flex-direction:column;
     justify-content: center;
     align-items: center;
@@ -149,7 +152,7 @@ h3{
 }
 
 .container-signup{
-    margin: 75px;
+    margin: 100px;
     background-color: #3882F6;
     display:flex;
     padding: 30px;
